# PhotoRecognitionApp

./: .env.example  .gitignore  Dockerfile  README.md  create_db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db  test.ipynb
Models/: Learninng model.ipynb  Malieiev.ipynb  Malieiev_last.ipynb  Project model.ipynb  ProjectModel_OM.ipynb  Project_Ustymenko.ipynb  cifar10_150_early_stop.ipynb  fp.ipynb
docs/: conf.py  index.rst
migration/: env.py
migration/versions/: 1186c267cbe1_init.py
src/: schemas.py  schemas_pictures.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  pictures.py  predicts.py  roles.py  users.py
src/routes/: auth.py  comments.py  healthchecker.py  picteres.py  predict.py  predicts.py  roles.py  user_profile.py
src/services/: auth.py  auth_admin.py  cloud_image.py  email.py
static/: style.css  styles.css
templates/: about_us.html  base.html  index.html  recognition.html
tests/: conftest.py  test_comment_response.py  test_repository_pictures.py  test_repository_roles.py  test_repository_users.py  test_route_auth.py  test_route_roles.py  test_route_user_profile.py  test_service_auth.py  test_service_auth_admin.py  test_user_profile.py
